Design sign up from

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,4 +1,6 @@
 {
   "appName": "Crafty Bay",
-  "signUp": "সাইন আপ"
+  "signUp": "সাইন আপ",
+  "createAcc": "আপনার অ্যাকাউন্ট তৈরি করুন",
+  "getStart": "আপনার বিবরণ দিয়ে শুরু করুন"
 }
