--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,6 @@
 {
   "appName": "Crafty Bay",
-  "signUp": "Sign up"
+  "signUp": "Sign up",
+  "createAcc": "Create Your Account",
+  "getStart": "Get started with your details"
 }
