OTP page design

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -2,5 +2,10 @@
   "appName": "Crafty Bay",
   "signUp": "সাইন আপ",
   "createAcc": "আপনার অ্যাকাউন্ট তৈরি করুন",
-  "getStart": "আপনার বিবরণ দিয়ে শুরু করুন"
+  "getStart": "আপনার বিবরণ দিয়ে শুরু করুন",
+  "loginTitle": "লগইন করুন",
+  "loginDescription": "আপনার অ্যাকাউন্টের বিবরণ দিয়ে সাইন ইন করুন",
+  "otpCode": "OTP দেন",
+  "otpDescription": "আপনার ই-মেইল এ ৪ সংখ্যার একটি OTP কোড পাঠানো হয়েছে"
+
 }
